--- a/app/views/layouts/_stylesheet.html.erb
+++ b/app/views/layouts/_stylesheet.html.erb
@@ -1,6 +1,6 @@
 <!-- General Styles -->
 <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css" type="text/css" charset="utf-8" />
-<%= stylesheet_link_tag "application", "custom.css", params[:controller], media: "all", "data-turbolinks-track" => true %>
+<%= stylesheet_link_tag "application", params[:controller], media: "all", "data-turbolinks-track" => true %>
 
 <!-- Style & fonts for each page that needs specific styles -->
 <% case @controlador%>
@@ -8,5 +8,9 @@
 		<% case @accion %>
 			<%when "landing_page" %>
 				<%= stylesheet_link_tag "devices.css", media: "all", "data-turbolinks-track" => true %>
+			<% else %>
+				<%= stylesheet_link_tag "flat-ui.min.css", "login.css", media: "all", "data-turbolinks-track" => true %>
 		<% end %>
+	<% else %>
+		<%= stylesheet_link_tag "flat-ui.min.css", "custom.css", media: "all", "data-turbolinks-track" => true %>
 <% end %>
