--- a/app/assets/stylesheets/babies.css.scss
+++ b/app/assets/stylesheets/babies.css.scss
@@ -4,7 +4,7 @@
 .form-group.col-md-2 .form-control{
 	width: 100%;
 }
-.btn-primary.pull-right{
+.btn-primary.pull-right.add{
 	margin-top:10px;
 	margin-right:15px;
 }
