--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,8 +8,7 @@
 	position: relative;
 }
 #upload-alerts{
-	position: absolute;
-	width: calc(100% - 30px);
+	width: 100%;
 }
 .position_absolute{
 	position: absolute;
@@ -17,4 +16,28 @@
 }
 .position_relative{
 	position: relative;
+}
+.navbar-inverse{
+	border-radius:0px;
+}
+
+.table.table-striped tbody tr td{
+	font-size: 16px;
+	font-weight: 100;
+	color: black;
+}
+.select2-container.select-primary{
+	padding: 0px;
+}
+.form-group.pull-left{
+	margin-right: 15px;
+	margin-bottom: 10px;
+}
+.container.footer{
+	min-height: 50px;
+	margin-top: 50px;
+}
+.footer .text-muted{
+	vertical-align: middle;
+	padding-top: 25px;
 }
