--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -62,6 +62,8 @@ p.paragraph {
   color: rgba(0,0,0,.5);
 }
 .logo {
+  color: white;
+  text-decoration: none;
   font-size: 30px;
   line-height: 30px;
   font-weight: 900;
