--- a/app/views/static_pages/404.html.erb
+++ b/app/views/static_pages/404.html.erb
@@ -1,1 +1,4 @@
-Error 404
+<div class="wrap fail">
+	<h3>404 - Page not found. Nothing to see here.</h3> 
+	<%= link_to "Please try again later", root_path %>
+</div>
