--- a/app/views/layouts/_stylesheet.html.erb
+++ b/app/views/layouts/_stylesheet.html.erb
@@ -9,7 +9,7 @@
 			<%when "landing_page" %>
 				<%= stylesheet_link_tag "devices.css", media: "all", "data-turbolinks-track" => true %>
 			<% else %>
-				<%= stylesheet_link_tag "flat-ui.min.css", "login.css", media: "all", "data-turbolinks-track" => true %>
+				<%= stylesheet_link_tag "flat-ui.min.css", "custom.css", "login.css", media: "all", "data-turbolinks-track" => true %>
 		<% end %>
 	<% else %>
 		<%= stylesheet_link_tag "flat-ui.min.css", "custom.css", media: "all", "data-turbolinks-track" => true %>
