Add Assistants Endpoints and Views

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,6 +19,11 @@
         <% end %>  
       </li>
       <li>
+        <%= link_to assistants_path, :class => "" do %>
+          Protectoras y Educadoras
+        <% end %>  
+      </li>
+      <li>
         <%= link_to activities_path, :class => "" do %>
           Tipos de Actividades
         <% end %> 
